--- a/advisory.html
+++ b/advisory.html
@@ -55,7 +55,7 @@
 <section class="section">
     <div class="reveal-text" style="text-align: center; background: #f8f9fa; padding: 50px; border-radius: 8px;">
         <h2 style="color: var(--secondary-color);">To Be Announced</h2>
-        [cite_start]<p style="font-size: 1.2rem; margin-top: 20px;">The International and National Advisory Committees [cite: 96-98] are currently being finalized.</p>
+        <p style="font-size: 1.2rem; margin-top: 20px;">The International and National Advisory Committees are currently being finalized.</p>
         <p style="margin-top: 10px;">Please check back soon for updates.</p>
     </div>
 </section>
