--- a/advisory.html
+++ b/advisory.html
@@ -25,7 +25,7 @@
         <li><a href="about.html">About</a></li>
         
         <li>
-            <a href="committee.html" class="dropbtn active">Committee</a>
+            <a href="committee.html" class="dropbtn">Committee</a>
             <ul class="dropdown-content">
                 <li><a href="committee.html">Organizing Committee</a></li>
                 <li><a href="committee.html#steering">Steering Committee</a></li>
