--- a/advisory.html
+++ b/advisory.html
@@ -23,7 +23,7 @@
 
     <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html"  class="active">About</a></li>
+        <li><a href="about.html">About</a></li>
         
         <li>
             <a href="committee.html" class="dropbtn active">Committee</a>
