--- a/advisory.html
+++ b/advisory.html
@@ -71,49 +71,103 @@
     <div class="about-container">
         <div class="committee-group">
             <h3 class="group-title">International Advisory Committee</h3>
-            <div class="member-grid">
-                
-                <div class="member-card">
-                    <div class="member-name">Dr. Alan Bovik</div>
-                    <div class="member-affil">Adjunct Professor, The University of Texas at Austin, Texas, USA</div>
-                </div>
+ <div class="member-grid">
+    <div class="member-card">
+        <div class="member-photo-container">
+            <img src="assets/images/alan.jpg" alt="Dr. Alan Bovik" class="member-photo">
+        </div>
+        <div class="member-name">Dr. Alan Bovik</div>
+        <div class="member-affil">Adjunct Professor, The University of Texas at Austin, USA</div>
+        <div class="member-links">
+            <a href="#" title="Webpage"><i class="fas fa-globe"></i></a>
+            <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+        </div>
+    </div>
 
-                <div class="member-card">
-                    <div class="member-name">Dr. Henning Müller</div>
-                    <div class="member-affil">Professor, University of Geneva, Switzerland</div>
-                </div>
+    <div class="member-card">
+        <div class="member-photo-container">
+            <img src="assets/images/henning.jpg" alt="Dr. Henning Müller" class="member-photo">
+        </div>
+        <div class="member-name">Dr. Henning Müller</div>
+        <div class="member-affil">Professor, University of Geneva, Switzerland</div>
+        <div class="member-links">
+            <a href="#" title="Webpage"><i class="fas fa-globe"></i></a>
+            <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+        </div>
+    </div>
 
-                <div class="member-card">
-                    <div class="member-name">Dr. Jonathan Wu</div>
-                    <div class="member-affil">Professor, University of Windsor, Canada</div>
-                </div>
+    <div class="member-card">
+        <div class="member-photo-container">
+            <img src="assets/images/jonathan.jpg" alt="Dr. Jonathan Wu" class="member-photo">
+        </div>
+        <div class="member-name">Dr. Jonathan Wu</div>
+        <div class="member-affil">Professor, University of Windsor, Canada</div>
+        <div class="member-links">
+            <a href="#" title="Webpage"><i class="fas fa-globe"></i></a>
+            <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+        </div>
+    </div>
 
-                <div class="member-card">
-                    <div class="member-name">Dr. Ondrej Krejcar</div>
-                    <div class="member-affil">Professor, University of Hradec Kralove, Czechia</div>
-                </div>
+    <div class="member-card">
+        <div class="member-photo-container">
+            <img src="assets/images/ondrej.jpg" alt="Dr. Ondrej Krejcar" class="member-photo">
+        </div>
+        <div class="member-name">Dr. Ondrej Krejcar</div>
+        <div class="member-affil">Professor, University of Hradec Kralove, Czechia</div>
+        <div class="member-links">
+            <a href="#" title="Webpage"><i class="fas fa-globe"></i></a>
+            <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+        </div>
+    </div>
 
-                <div class="member-card">
-                    <div class="member-name">Dr. Daniel P. Lopresti</div>
-                    <div class="member-affil">Lehigh University, Pennsylvania, USA</div>
-                </div>
+    <div class="member-card">
+        <div class="member-photo-container">
+            <img src="assets/images/daniel.jpg" alt="Dr. Daniel P. Lopresti" class="member-photo">
+        </div>
+        <div class="member-name">Dr. Daniel P. Lopresti</div>
+        <div class="member-affil">Lehigh University, Pennsylvania, USA</div>
+        <div class="member-links">
+            <a href="#" title="Webpage"><i class="fas fa-globe"></i></a>
+            <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+        </div>
+    </div>
 
-                <div class="member-card">
-                    <div class="member-name">Dr. Ishwar K. Sethi</div>
-                    <div class="member-affil">Professor, Oakland University, Michigan, USA</div>
-                </div>
+    <div class="member-card">
+        <div class="member-photo-container">
+            <img src="assets/images/ishwar.jpg" alt="Dr. Ishwar K. Sethi" class="member-photo">
+        </div>
+        <div class="member-name">Dr. Ishwar K. Sethi</div>
+        <div class="member-affil">Professor, Oakland University, Michigan, USA</div>
+        <div class="member-links">
+            <a href="#" title="Webpage"><i class="fas fa-globe"></i></a>
+            <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+        </div>
+    </div>
 
-                <div class="member-card">
-                    <div class="member-name">Dr. Vladimír Mařík</div>
-                    <div class="member-affil">Scientific Director, Czech Technical University, Prague, Czechia</div>
-                </div>
+    <div class="member-card">
+        <div class="member-photo-container">
+            <img src="assets/images/vladimir.jpg" alt="Dr. Vladimír Mařík" class="member-photo">
+        </div>
+        <div class="member-name">Dr. Vladimír Mařík</div>
+        <div class="member-affil">Scientific Director, Czech Technical University, Czechia</div>
+        <div class="member-links">
+            <a href="#" title="Webpage"><i class="fas fa-globe"></i></a>
+            <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+        </div>
+    </div>
 
-                <div class="member-card">
-                    <div class="member-name">Dr. Barbara Zitova</div>
-                    <div class="member-affil">Scientist, Institute of Information Theory and Automation, Czechia</div>
-                </div>
-
-            </div>
+    <div class="member-card">
+        <div class="member-photo-container">
+            <img src="assets/images/barbara.jpg" alt="Dr. Barbara Zitova" class="member-photo">
+        </div>
+        <div class="member-name">Dr. Barbara Zitova</div>
+        <div class="member-affil">Scientist, Institute of Info. Theory and Automation, Czechia</div>
+        <div class="member-links">
+            <a href="#" title="Webpage"><i class="fas fa-globe"></i></a>
+            <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+        </div>
+    </div>
+</div>
         </div>
     </div>
 </section>
