--- a/national-advisory.html
+++ b/national-advisory.html
@@ -71,54 +71,79 @@
     <div class="about-container">
         <div class="committee-group">
             <h3 class="group-title">National Advisory Committee</h3>
-            <div class="member-grid">
-                
-                <div class="member-card">
-                    <div class="member-name">Dr. Santanu Chaudhury</div>
-                    <div class="member-affil">Schlumberger Chair Professor, I.I.T Delhi</div>
-                </div>
+    <div class="member-grid">
+    <div class="member-card">
+        <img src="assets/images/Santanu.jpg" alt="Dr. Santanu Chaudhury" class="member-photo">
+        <div class="member-info">
+            <a href="#" class="member-link"><div class="member-name">Dr. Santanu Chaudhury</div></a>
+            <div class="member-affil">Schlumberger Chair Professor, I.I.T Delhi</div>
+        </div>
+    </div>
 
-                <div class="member-card">
-                    <div class="member-name">Dr. Vikram M. Gadre</div>
-                    <div class="member-affil">Professor, IIT Bombay</div>
-                </div>
+    <div class="member-card">
+        <img src="assets/images/Vikram.jpg" alt="Dr. Vikram M. Gadre" class="member-photo">
+        <div class="member-info">
+            <a href="#" class="member-link"><div class="member-name">Dr. Vikram M. Gadre</div></a>
+            <div class="member-affil">Professor, IIT Bombay</div>
+        </div>
+    </div>
 
-                <div class="member-card">
-                    <div class="member-name">Dr. Jayanta Mukhopadhyay</div>
-                    <div class="member-affil">Professor, IIT Kharagpur</div>
-                </div>
+    <div class="member-card">
+        <img src="assets/images/Jayanta.jpg" alt="Dr. Jayanta Mukhopadhyay" class="member-photo">
+        <div class="member-info">
+            <a href="#" class="member-link"><div class="member-name">Dr. Jayanta Mukhopadhyay</div></a>
+            <div class="member-affil">Professor, IIT Kharagpur</div>
+        </div>
+    </div>
 
-                <div class="member-card">
-                    <div class="member-name">Dr. Sanjay Kumar Singh</div>
-                    <div class="member-affil">Professor, IIT BHU</div>
-                </div>
+    <div class="member-card">
+        <img src="assets/images/Sanjay.jpg" alt="Dr. Sanjay Kumar Singh" class="member-photo">
+        <div class="member-info">
+            <a href="#" class="member-link"><div class="member-name">Dr. Sanjay Kumar Singh</div></a>
+            <div class="member-affil">Professor, IIT BHU</div>
+        </div>
+    </div>
 
-                <div class="member-card">
-                    <div class="member-name">Dr. Rajeev Srivastava</div>
-                    <div class="member-affil">Professor, IIT BHU</div>
-                </div>
+    <div class="member-card">
+        <img src="assets/images/Rajeev.jpg" alt="Dr. Rajeev Srivastava" class="member-photo">
+        <div class="member-info">
+            <a href="#" class="member-link"><div class="member-name">Dr. Rajeev Srivastava</div></a>
+            <div class="member-affil">Professor, IIT BHU</div>
+        </div>
+    </div>
 
-                <div class="member-card">
-                    <div class="member-name">Dr. Chetan Arora</div>
-                    <div class="member-affil">Professor, IIT Delhi</div>
-                </div>
+    <div class="member-card">
+        <img src="assets/images/Chetan.jpg" alt="Dr. Chetan Arora" class="member-photo">
+        <div class="member-info">
+            <a href="#" class="member-link"><div class="member-name">Dr. Chetan Arora</div></a>
+            <div class="member-affil">Professor, IIT Delhi</div>
+        </div>
+    </div>
 
-                <div class="member-card">
-                    <div class="member-name">Dr. Sumohana S Channappayya</div>
-                    <div class="member-affil">Professor, IIT Hyderabad</div>
-                </div>
+    <div class="member-card">
+        <img src="assets/images/Sumohana.jpg" alt="Dr. Sumohana S Channappayya" class="member-photo">
+        <div class="member-info">
+            <a href="#" class="member-link"><div class="member-name">Dr. Sumohana S Channappayya</div></a>
+            <div class="member-affil">Professor, IIT Hyderabad</div>
+        </div>
+    </div>
 
-                <div class="member-card">
-                    <div class="member-name">Dr. Sushmita Mitra</div>
-                    <div class="member-affil">Professor, Indian Statistical Institute, Kolkata</div>
-                </div>
+    <div class="member-card">
+        <img src="assets/images/Sushmita.jpg" alt="Dr. Sushmita Mitra" class="member-photo">
+        <div class="member-info">
+            <a href="#" class="member-link"><div class="member-name">Dr. Sushmita Mitra</div></a>
+            <div class="member-affil">Professor, Indian Statistical Institute, Kolkata</div>
+        </div>
+    </div>
 
-                <div class="member-card">
-                    <div class="member-name">Prof. B Yegnanarayana</div>
-                    <div class="member-affil">Emeritus Professor, IIIT Hyderabad</div>
-                </div>
-
-            </div>
+    <div class="member-card">
+        <img src="assets/images/B.jpg" alt="Prof. B Yegnanarayana" class="member-photo">
+        <div class="member-info">
+            <a href="#" class="member-link"><div class="member-name">Prof. B Yegnanarayana</div></a>
+            <div class="member-affil">Emeritus Professor, IIIT Hyderabad</div>
+        </div>
+    </div>
+</div>
         </div>
     </div>
 </section>
