--- a/national-advisory.html
+++ b/national-advisory.html
@@ -97,7 +97,7 @@
     </div>
 
     <div class="member-card">
-        <img src="assets/images/Sanjay.jpg" alt="Dr. Sanjay Kumar Singh" class="member-photo">
+        <img src="assets/images/Sanjaykumar.jpg" alt="Dr. Sanjay Kumar Singh" class="member-photo">
         <div class="member-info">
             <a href="#" class="member-link"><div class="member-name">Dr. Sanjay Kumar Singh</div></a>
             <div class="member-affil">Professor, IIT BHU</div>
