--- a/advisory.html
+++ b/advisory.html
@@ -158,7 +158,7 @@
 
     <div class="member-card">
         <div class="member-photo-container">
-            <img src="assets/images/barbara.jpg" alt="Dr. Barbara Zitova" class="member-photo">
+            <img src="assets/images/Barbara.jpg" alt="Dr. Barbara Zitova" class="member-photo">
         </div>
         <div class="member-name">Dr. Barbara Zitova</div>
         <div class="member-affil">Scientist, Institute of Info. Theory and Automation, Czechia</div>
