--- a/advisory.html
+++ b/advisory.html
@@ -74,7 +74,7 @@
  <div class="member-grid">
     <div class="member-card">
         <div class="member-photo-container">
-            <img src="assets/images/alan.jpg" alt="Dr. Alan Bovik" class="member-photo">
+            <img src="assets/images/Bovik-AI.jpg" alt="Dr. Alan Bovik" class="member-photo">
         </div>
         <div class="member-name">Dr. Alan Bovik</div>
         <div class="member-affil">Adjunct Professor, The University of Texas at Austin, USA</div>
