--- a/advisory.html
+++ b/advisory.html
@@ -134,7 +134,7 @@
 
     <div class="member-card">
         <div class="member-photo-container">
-            <img src="assets/images/ishwar.jpg" alt="Dr. Ishwar K. Sethi" class="member-photo">
+            <img src="assets/images/IshwarKsethi.jpg" alt="Dr. Ishwar K. Sethi" class="member-photo">
         </div>
         <div class="member-name">Dr. Ishwar K. Sethi</div>
         <div class="member-affil">Professor, Oakland University, Michigan, USA</div>
