--- a/advisory.html
+++ b/advisory.html
@@ -98,7 +98,7 @@
 
     <div class="member-card">
         <div class="member-photo-container">
-            <img src="assets/images/jonathan.jpg" alt="Dr. Jonathan Wu" class="member-photo">
+            <img src="assets/images/jonathan_wu_cei.jpg" alt="Dr. Jonathan Wu" class="member-photo">
         </div>
         <div class="member-name">Dr. Jonathan Wu</div>
         <div class="member-affil">Professor, University of Windsor, Canada</div>
