--- a/advisory.html
+++ b/advisory.html
@@ -110,7 +110,7 @@
 
     <div class="member-card">
         <div class="member-photo-container">
-            <img src="assets/images/ondrej.jpg" alt="Dr. Ondrej Krejcar" class="member-photo">
+            <img src="assets/images/Ondrej.jpg" alt="Dr. Ondrej Krejcar" class="member-photo">
         </div>
         <div class="member-name">Dr. Ondrej Krejcar</div>
         <div class="member-affil">Professor, University of Hradec Kralove, Czechia</div>
