--- a/national-advisory.html
+++ b/national-advisory.html
@@ -73,7 +73,7 @@
             <h3 class="group-title">National Advisory Committee</h3>
     <div class="member-grid">
     <div class="member-card">
-        <img src="assets/images/Santanu.jpg" alt="Dr. Santanu Chaudhury" class="member-photo">
+        <img src="assets/images/santanuchaudary.jpg" alt="Dr. Santanu Chaudhury" class="member-photo">
         <div class="member-info">
             <a href="#" class="member-link"><div class="member-name">Dr. Santanu Chaudhury</div></a>
             <div class="member-affil">Schlumberger Chair Professor, I.I.T Delhi</div>
@@ -81,7 +81,7 @@
     </div>
 
     <div class="member-card">
-        <img src="assets/images/Vikram.jpg" alt="Dr. Vikram M. Gadre" class="member-photo">
+        <img src="assets/images/VikramMGadre.jpg" alt="Dr. Vikram M. Gadre" class="member-photo">
         <div class="member-info">
             <a href="#" class="member-link"><div class="member-name">Dr. Vikram M. Gadre</div></a>
             <div class="member-affil">Professor, IIT Bombay</div>
@@ -97,7 +97,7 @@
     </div>
 
     <div class="member-card">
-        <img src="assets/images/Sanjaykumar.jpg" alt="Dr. Sanjay Kumar Singh" class="member-photo">
+        <img src="assets/images/SanjayKumar.jpg" alt="Dr. Sanjay Kumar Singh" class="member-photo">
         <div class="member-info">
             <a href="#" class="member-link"><div class="member-name">Dr. Sanjay Kumar Singh</div></a>
             <div class="member-affil">Professor, IIT BHU</div>
@@ -113,7 +113,7 @@
     </div>
 
     <div class="member-card">
-        <img src="assets/images/Chetan.jpg" alt="Dr. Chetan Arora" class="member-photo">
+        <img src="assets/images/chetan.jpg" alt="Dr. Chetan Arora" class="member-photo">
         <div class="member-info">
             <a href="#" class="member-link"><div class="member-name">Dr. Chetan Arora</div></a>
             <div class="member-affil">Professor, IIT Delhi</div>
@@ -121,7 +121,7 @@
     </div>
 
     <div class="member-card">
-        <img src="assets/images/Sumohana.jpg" alt="Dr. Sumohana S Channappayya" class="member-photo">
+        <img src="assets/images/SumohanaChannappayya.jpg" alt="Dr. Sumohana S Channappayya" class="member-photo">
         <div class="member-info">
             <a href="#" class="member-link"><div class="member-name">Dr. Sumohana S Channappayya</div></a>
             <div class="member-affil">Professor, IIT Hyderabad</div>
@@ -129,7 +129,7 @@
     </div>
 
     <div class="member-card">
-        <img src="assets/images/Sushmita.jpg" alt="Dr. Sushmita Mitra" class="member-photo">
+        <img src="assets/images/sushmita.jpg" alt="Dr. Sushmita Mitra" class="member-photo">
         <div class="member-info">
             <a href="#" class="member-link"><div class="member-name">Dr. Sushmita Mitra</div></a>
             <div class="member-affil">Professor, Indian Statistical Institute, Kolkata</div>
@@ -137,7 +137,7 @@
     </div>
 
     <div class="member-card">
-        <img src="assets/images/B.jpg" alt="Prof. B Yegnanarayana" class="member-photo">
+        <img src="assets/images/BayyaYegnanarayana.jpg" alt="Prof. B Yegnanarayana" class="member-photo">
         <div class="member-info">
             <a href="#" class="member-link"><div class="member-name">Prof. B Yegnanarayana</div></a>
             <div class="member-affil">Emeritus Professor, IIIT Hyderabad</div>
