--- a/national-advisory.html
+++ b/national-advisory.html
@@ -75,7 +75,7 @@
     <div class="member-card">
         <img src="assets/images/santanuchaudary.jpg" alt="Dr. Santanu Chaudhury" class="member-photo">
         <div class="member-info">
-            <a href="#" class="member-link"><div class="member-name">Dr. Santanu Chaudhury</div></a>
+            <a href="https://web.iitd.ac.in/~santanuc/" class="member-link"><div class="member-name">Dr. Santanu Chaudhury</div></a>
             <div class="member-affil">Schlumberger Chair Professor, I.I.T Delhi</div>
         </div>
     </div>
