--- a/national-advisory.html
+++ b/national-advisory.html
@@ -83,7 +83,7 @@
     <div class="member-card">
         <img src="assets/images/VikramMGadre.jpg" alt="Dr. Vikram M. Gadre" class="member-photo">
         <div class="member-info">
-            <a href="#" class="member-link"><div class="member-name">Dr. Vikram M. Gadre</div></a>
+            <a href="https://www.ee.iitb.ac.in/web/people/vikram-m-gadre/" class="member-link"><div class="member-name">Dr. Vikram M. Gadre</div></a>
             <div class="member-affil">Professor, IIT Bombay</div>
         </div>
     </div>
