--- a/national-advisory.html
+++ b/national-advisory.html
@@ -91,7 +91,7 @@
     <div class="member-card">
         <img src="assets/images/Jayanta.jpg" alt="Dr. Jayanta Mukhopadhyay" class="member-photo">
         <div class="member-info">
-            <a href="#" class="member-link"><div class="member-name">Dr. Jayanta Mukhopadhyay</div></a>
+            <a href="https://www.iitkgp.ac.in/department/CS/faculty/cs-jay" class="member-link"><div class="member-name">Dr. Jayanta Mukhopadhyay</div></a>
             <div class="member-affil">Professor, IIT Kharagpur</div>
         </div>
     </div>
