--- a/national-advisory.html
+++ b/national-advisory.html
@@ -99,7 +99,7 @@
     <div class="member-card">
         <img src="assets/images/SanjayKumar.jpg" alt="Dr. Sanjay Kumar Singh" class="member-photo">
         <div class="member-info">
-            <a href="#" class="member-link"><div class="member-name">Dr. Sanjay Kumar Singh</div></a>
+            <a href="https://www.iitbhu.ac.in/dept/cse/people/skscse" class="member-link"><div class="member-name">Dr. Sanjay Kumar Singh</div></a>
             <div class="member-affil">Professor, IIT BHU</div>
         </div>
     </div>
