--- a/national-advisory.html
+++ b/national-advisory.html
@@ -107,7 +107,7 @@
     <div class="member-card">
         <img src="assets/images/Rajeev.jpg" alt="Dr. Rajeev Srivastava" class="member-photo">
         <div class="member-info">
-            <a href="#" class="member-link"><div class="member-name">Dr. Rajeev Srivastava</div></a>
+            <a href="https://www.iitbhu.ac.in/dept/cse/people/rajeevcse" class="member-link"><div class="member-name">Dr. Rajeev Srivastava</div></a>
             <div class="member-affil">Professor, IIT BHU</div>
         </div>
     </div>
