--- a/national-advisory.html
+++ b/national-advisory.html
@@ -115,7 +115,7 @@
     <div class="member-card">
         <img src="assets/images/chetan.jpg" alt="Dr. Chetan Arora" class="member-photo">
         <div class="member-info">
-            <a href="#" class="member-link"><div class="member-name">Dr. Chetan Arora</div></a>
+            <a href="https://web.iitd.ac.in/~chetan/" class="member-link"><div class="member-name">Dr. Chetan Arora</div></a>
             <div class="member-affil">Professor, IIT Delhi</div>
         </div>
     </div>
