--- a/national-advisory.html
+++ b/national-advisory.html
@@ -123,7 +123,7 @@
     <div class="member-card">
         <img src="assets/images/SumohanaChannappayya.jpg" alt="Dr. Sumohana S Channappayya" class="member-photo">
         <div class="member-info">
-            <a href="#" class="member-link"><div class="member-name">Dr. Sumohana S Channappayya</div></a>
+            <a href="https://iith.ac.in/ee/sumohana/" class="member-link"><div class="member-name">Dr. Sumohana S Channappayya</div></a>
             <div class="member-affil">Professor, IIT Hyderabad</div>
         </div>
     </div>
