--- a/national-advisory.html
+++ b/national-advisory.html
@@ -131,7 +131,7 @@
     <div class="member-card">
         <img src="assets/images/sushmita.jpg" alt="Dr. Sushmita Mitra" class="member-photo">
         <div class="member-info">
-            <a href="#" class="member-link"><div class="member-name">Dr. Sushmita Mitra</div></a>
+            <a href="https://www.isical.ac.in/~sushmita/" class="member-link"><div class="member-name">Dr. Sushmita Mitra</div></a>
             <div class="member-affil">Professor, Indian Statistical Institute, Kolkata</div>
         </div>
     </div>
