--- a/national-advisory.html
+++ b/national-advisory.html
@@ -139,7 +139,7 @@
     <div class="member-card">
         <img src="assets/images/BayyaYegnanarayana.jpg" alt="Prof. B Yegnanarayana" class="member-photo">
         <div class="member-info">
-            <a href="#" class="member-link"><div class="member-name">Prof. B Yegnanarayana</div></a>
+            <a href="https://www.iith.ac.in/inst/yegna/" class="member-link"><div class="member-name">Prof. B Yegnanarayana</div></a>
             <div class="member-affil">Emeritus Professor, IIIT Hyderabad</div>
         </div>
     </div>
