--- a/advisory.html
+++ b/advisory.html
@@ -86,7 +86,7 @@
 
     <div class="member-card">
         <div class="member-photo-container">
-            <img src="assets/images/henning.jpg" alt="Dr. Henning Müller" class="member-photo">
+            <img src="assets/images/HenningMuller.jpg" alt="Dr. Henning Müller" class="member-photo">
         </div>
         <div class="member-name">Dr. Henning Müller</div>
         <div class="member-affil">Professor, University of Geneva, Switzerland</div>
