--- a/advisory.html
+++ b/advisory.html
@@ -79,7 +79,7 @@
         <div class="member-name">Dr. Alan Bovik</div>
         <div class="member-affil">Adjunct Professor, The University of Texas at Austin, USA</div>
         <div class="member-links">
-            <a href="#" title="Webpage"><i class="fas fa-globe"></i></a>
+            <a href="https://www.ece.utexas.edu/people/faculty/alan-bovik" title="Webpage"><i class="fas fa-globe"></i></a>
             <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
         </div>
     </div>
@@ -103,7 +103,7 @@
         <div class="member-name">Dr. Jonathan Wu</div>
         <div class="member-affil">Professor, University of Windsor, Canada</div>
         <div class="member-links">
-            <a href="#" title="Webpage"><i class="fas fa-globe"></i></a>
+            <a href="https://www.uwindsor.ca/engineering/electrical/317/dr-jonathan-wu" title="Webpage"><i class="fas fa-globe"></i></a>
             <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
         </div>
     </div>
@@ -115,7 +115,7 @@
         <div class="member-name">Dr. Ondrej Krejcar</div>
         <div class="member-affil">Professor, University of Hradec Kralove, Czechia</div>
         <div class="member-links">
-            <a href="#" title="Webpage"><i class="fas fa-globe"></i></a>
+            <a href="https://www.uhk.cz/en/person/3321/ondrej-krejcar" title="Webpage"><i class="fas fa-globe"></i></a>
             <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
         </div>
     </div>
@@ -127,7 +127,7 @@
         <div class="member-name">Dr. Daniel P. Lopresti</div>
         <div class="member-affil">Lehigh University, Pennsylvania, USA</div>
         <div class="member-links">
-            <a href="#" title="Webpage"><i class="fas fa-globe"></i></a>
+            <a href="https://engineering.lehigh.edu/faculty/daniel-p-lopresti" title="Webpage"><i class="fas fa-globe"></i></a>
             <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
         </div>
     </div>
@@ -139,7 +139,7 @@
         <div class="member-name">Dr. Ishwar K. Sethi</div>
         <div class="member-affil">Professor, Oakland University, Michigan, USA</div>
         <div class="member-links">
-            <a href="#" title="Webpage"><i class="fas fa-globe"></i></a>
+            <a href="https://www.oakland.edu/secs/directory/sethi/" title="Webpage"><i class="fas fa-globe"></i></a>
             <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
         </div>
     </div>
@@ -163,7 +163,7 @@
         <div class="member-name">Dr. Barbara Zitova</div>
         <div class="member-affil">Scientist, Institute of Info. Theory and Automation, Czechia</div>
         <div class="member-links">
-            <a href="#" title="Webpage"><i class="fas fa-globe"></i></a>
+            <a href="https://utia.cas.cz/en/people/?pid=222" title="Webpage"><i class="fas fa-globe"></i></a>
             <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
         </div>
     </div>
