--- a/advisory.html
+++ b/advisory.html
@@ -80,7 +80,7 @@
         <div class="member-affil">Adjunct Professor, The University of Texas at Austin, USA</div>
         <div class="member-links">
             <a href="https://www.ece.utexas.edu/people/faculty/alan-bovik" title="Webpage"><i class="fas fa-globe"></i></a>
-            <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+            <a href="https://www.ece.utexas.edu/people/faculty/alan-bovik" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
         </div>
     </div>
 
