--- a/advisory.html
+++ b/advisory.html
@@ -146,7 +146,7 @@
 
     <div class="member-card">
         <div class="member-photo-container">
-            <img src="assets/images/vladimir.jpg" alt="Dr. Vladimír Mařík" class="member-photo">
+            <img src="assets/images/Vladimir.jpg" alt="Dr. Vladimír Mařík" class="member-photo">
         </div>
         <div class="member-name">Dr. Vladimír Mařík</div>
         <div class="member-affil">Scientific Director, Czech Technical University, Czechia</div>
